--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,31 +33,60 @@
   }
 }
 /* my style */
-.ourTitle{
+.NavbarActive {
+  background-color: #2b6777;
+  transition: all 0.1s ease-in;
+}
+.ourTitle {
   color: #2b6777;
 }
-.happy-client{
-  background: linear-gradient(to bottom, #25656bc9,rgba(18, 30, 36, 0.842)), url("https://preview.colorlib.com/theme/counselor/images/xbg_4.jpg.pagespeed.ic.uyyupfLttr.webp") ;
+.happy-client {
+  background: linear-gradient(to bottom, #25656bc9, rgba(18, 30, 36, 0.842)),
+    url("https://preview.colorlib.com/theme/counselor/images/xbg_4.jpg.pagespeed.ic.uyyupfLttr.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
 }
-.swiper-pagination .swiper-pagination-bullet{
+.swiper-pagination .swiper-pagination-bullet {
   background-color: #f1f1f1;
 }
-.map-marker{
+.map-marker {
   color: #2b6777;
 }
-.footer{
+.inner-page-cover{
+  background-color: #2b6777;
+}
+.footer {
   background-color: #f4f8fc;
   z-index: 1;
 }
-.copywrite{
+.footer h4,
+.footer h6 {
+  color: #2b6777;
+}
+.footer i:hover {
+  color: #2b6777;
+  cursor: pointer;
+}
+.footer li a {
+  text-decoration: none;
+  color: #000;
+  transition: all 0.3s ease-in;
+}
+.footer li a:hover {
+  color: #2b6777;
+}
+.copywrite {
   background-color: #2b6777;
 }
-#seach-area .shape{
-  animation: shapeAnimate 15s linear infinite;
+
+.latest-add,
+.latest-add-card {
+  background-color: #f4f8fc;
+}
+.entryButton {
+  background-color: rgba(255, 255, 255, 0.096);
 }
 @keyframes shapeAnimate {
   0% {
@@ -67,5 +94,17 @@
   }
   100% {
     transform: rotate(1turn);
+  }
+}
+@media screen and (max-width: 991px) {
+  .App,
+  .footer,
+  .footer-brand {
+    text-align: center;
+  }
+  .footer-subtitle {
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
   }
 }
